fixed remove button spacing issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -373,6 +373,7 @@ p {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: 10px 0;
+  padding: 0 0 0 5px;
 }
 .shopping-container p {
   text-align: right;
