--- a/src/styles/sass/partials/_typography.scss
+++ b/src/styles/sass/partials/_typography.scss
@@ -83,6 +83,7 @@ p {
 		flex-direction: row-reverse;
 		justify-content: space-between;
 		margin: 10px 0;
+		padding: 0 0 0 5px;
 	}
 	p {
 		text-align: right;
